# retina

./: .gitignore  AGENTS.md  DESIGN.md  PLAN.md  PLAN_segmentation_comparsion.md  PRODUCT.md  PROGRESS.md  TREE.md  main.ipynb  pyproject.toml  segmentation_comparison_8class.ipynb  table_for_publication .xlsx
.impeccable/: design.json
docs/: architecture-overview-guide.html  architecture-overview-guide.md  attention-architecture-explainer.html  fusion-explainer.html  label-semantics-cohort-vs-cad.html  phase-1-dataset-analysis.html  phase-10-loss-functions.html  phase-11-data-augmentation.html  phase-12-training-strategy.html  phase-13-explainability.html  phase-14-evaluation-metrics.html  phase-15-ablation-studies.html  phase-16-baseline-comparison.html  phase-17-statistical-validation.html  phase-18-novel-research-contributions.html  phase-19-deliverables.html  phase-2-preprocessing-pipeline.html  phase-20-v2-roadmap.html  phase-3-explainer.html  phase-4-to-8-explainer.html  phase-9-classifier-prototypes.html  proposed-methodology-and-novelty-review.html  proposed-methodology.html  retina-rasta-project-keypoints.md  segmentation-pseudo-masks-explainer.html  z-scores-explainer.html
outputs/phase10_losses/: phase10_outer_fold_loss_plan.csv  phase10_summary.json
outputs/phase11_data_augmentation/: phase11_data_augmentation_summary.csv  phase11_data_augmentation_summary.json
outputs/phase12_training/: phase12_all_outer_test_predictions.csv  phase12_cross_validation_summary.csv  phase12_summary.json
outputs/phase14_evaluation/: phase14_evaluation_manifest.json  (+14 more)
(+99 files in other folders)
